express-server and oldResume Parser

--- a/index.html
+++ b/index.html
@@ -180,8 +180,10 @@
         </div>
     </div>
 
-    <script src="templates.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/pdf.js/3.11.174/pdf.min.js"></script>
+    <script src="template.js"></script>
     <script src="preview.js"></script>
     <script src="script.js"></script>
+    <script src="resume-uploader.js"></script>
 </body>
 </html>
