prompt added roles

--- a/html pdf/index.html
+++ b/html pdf/index.html
@@ -19,6 +19,12 @@
                 <button class="btn btn-primary" id="downloadBtn">
                     <i class="fas fa-download"></i> Download PDF
                 </button>
+                <label for="role">Select Role:</label>
+                <select id="role" >
+                <option value="software">Software/IT</option>
+                <option value="datascience">Data Science</option>
+                <option value="consulting">Consulting</option>
+                </select>
             </div>
         </header>
 
