--- a/html pdf/index.html
+++ b/html pdf/index.html
@@ -158,8 +158,16 @@
                             </div>
                         </div>
                         <div class="form-group">
-                            <label for="skills">Skills</label>
-                            <textarea id="skills" name="skills" rows="2" placeholder="List your skills separated by | (pipe)"></textarea>
+                            <label for="languages">Languages</label>
+                            <textarea id="languages" name="languages" rows="2" placeholder="e.g., JavaScript, Java, Python, C/C++, MySQL, HTML/CSS"></textarea>
+                        </div>
+                        <div class="form-group">
+                            <label for="frameworks">Frameworks</label>
+                            <textarea id="frameworks" name="frameworks" rows="2" placeholder="e.g., React, Node.js, Django, Flask, Spring, Bootstrap"></textarea>
+                        </div>
+                        <div class="form-group">
+                            <label for="developerTools">Developer Tools</label>
+                            <textarea id="developerTools" name="developerTools" rows="2" placeholder="e.g., Git, Docker, VS Code, PyCharm, IntelliJ, Postman"></textarea>
                         </div>
                     </section>
 
