--- a/html pdf/index.html
+++ b/html pdf/index.html
@@ -74,6 +74,23 @@
                             </div>
                         </div>
                     </section>
+                    <label for="fontSelect">Font Style:</label>
+                    <select id="fontSelect" class="font-style-selector">
+                        <option value="'Calibri', sans-serif">Calibri</option>
+                        <option value="'Arial', sans-serif">Arial</option>
+                        <option value="'Times New Roman', serif">Times New Roman</option>
+                        <option value="'Georgia', serif">Georgia</option>
+                    </select>
+                    <label for="headerColor">Header Color:</label>
+                    <select id="headerColor">
+                        <option value="#2c3e50">Dark Blue (Default)</option>
+                        <option value="#1abc9c">Teal</option>
+                        <option value="#e74c3c">Red</option>
+                        <option value="#8e44ad">Purple</option>
+                        <option value="#34495e">Navy</option>
+                        <option value="#27ae60">Green</option>
+                    </select>
+
 
                     <!-- Section Reordering Controls -->
                     <section class="form-section box">
@@ -442,6 +459,7 @@
     <script src="js/app.js"></script>
     <script src="js/formHandler.js"></script>
     <script src="js/pdfPreview.js"></script>
+    <script src="js/fontCustomization.js"></script>
     
     <script>
         // Role-based section recommendations
